# auto-build-user-stories

./: README.md  pyproject.toml
src/: extract_content.py  parse_md_table.py  user_story.py
