[build-system]
requires = ["setuptools >= 70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "user_story"
version = "1.0.0"
requires-python = ">=3.9"
authors = [
  {name = "Mrigank Kumar", email = "mkpro118@gmail.com"}
]
maintainers = [
  {name = "Mrigank Kumar", email = "mkpro118@gmail.com"}
]
description = "Automatically Build Markdown Tables from GitHub Issues"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
keywords = ["autobuild", "user story", "markdown", "markdown tables"]
classifiers = [
  "Development Status :: 5 - Production/Stable",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[project.urls]
Repository = "https://github.com/mkpro118/auto-build-user-stories.git"
Issues = "https://github.com/mkpro118/auto-build-user-stories/issues"

[project.scripts]
user_story = "user_story:main"
